Revision history for {{$dist->name}}

{{$NEXT}}

0.008     2019-07-16 20:40:17+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - when creating a table, the primary key(s) were not quoted

0.007     2019-06-30 01:52:53+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - improved query performance, particularly in COPY operations,
    by allowing multiple smaller writes to be combined

0.006     2019-06-04 23:47:47+08:00 Asia/Kuala_Lumpur
    New features:

    - some updates to handle primary keys on tables in ::DDL

0.005     2019-05-05 19:21:51+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - improvement schema handling in DDL generation methods to be more consistent

0.004     2019-05-01 06:46:59+08:00 Asia/Kuala_Lumpur
    New features:

    - very basic type and table info retrieval, intended as a starting point
    to replace the common information_schema handling used in other databases.

0.003     2019-04-21 14:20:29+08:00 Asia/Kuala_Lumpur
    New features:

    - imported temporary schema generation templates in ::DDL

0.002     2019-04-20 15:18:59+08:00 Asia/Kuala_Lumpur
    New features:

    - ->write_len equivalent for ->read_len, defaults to 2MB (previously 8KB which was
    not so efficient when dealing with larger queries or bulk transfer such as COPY IN)
    - ->application_name support (for cases where it's not so easy to add that to the URI)

0.001     2019-04-15 06:29:39+08:00 Asia/Kuala_Lumpur
    Initial CPAN release