@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
 use strict;
 use warnings;
 
@@ -17,14 +17,17 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Database::Async::Engine::PostgreSQL",
   "PREREQ_PM" => {
+    "Config::Tiny" => 0,
     "Database::Async" => "0.008",
     "Database::Async::Engine" => 0,
     "Database::Async::Query" => 0,
+    "File::HomeDir" => 0,
     "Future" => "0.40",
     "Future::AsyncAwait" => "0.28",
     "IO::Async::SSL" => 0,
     "IO::Socket::SSL" => 0,
     "Log::Any" => "1.050",
+    "Path::Tiny" => 0,
     "Protocol::Database::PostgreSQL" => "1.005",
     "Protocol::Database::PostgreSQL::Client" => 0,
     "Protocol::Database::PostgreSQL::Constants" => 0,
@@ -45,6 +48,7 @@ my %WriteMakefileArgs = (
     "Database::Async" => "0.008",
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
+    "File::Temp" => 0,
     "IO::Async::Loop" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
@@ -52,6 +56,7 @@ my %WriteMakefileArgs = (
     "Test::CheckDeps" => "0.010",
     "Test::Deep" => 0,
     "Test::Fatal" => "0.010",
+    "Test::MockModule" => 0,
     "Test::More" => "0.98",
     "Test::PostgreSQL" => 0,
     "Test::Refcount" => "0.07",
@@ -65,11 +70,14 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Config::Tiny" => 0,
   "Database::Async" => "0.008",
   "Database::Async::Engine" => 0,
   "Database::Async::Query" => 0,
   "ExtUtils::MakeMaker" => 0,
+  "File::HomeDir" => 0,
   "File::Spec" => 0,
+  "File::Temp" => 0,
   "Future" => "0.40",
   "Future::AsyncAwait" => "0.28",
   "IO::Async::Loop" => 0,
@@ -79,6 +87,7 @@ my %FallbackPrereqs = (
   "IPC::Open3" => 0,
   "Log::Any" => "1.050",
   "Log::Any::Adapter" => 0,
+  "Path::Tiny" => 0,
   "Protocol::Database::PostgreSQL" => "1.005",
   "Protocol::Database::PostgreSQL::Client" => 0,
   "Protocol::Database::PostgreSQL::Constants" => 0,
@@ -89,6 +98,7 @@ my %FallbackPrereqs = (
   "Test::CheckDeps" => "0.010",
   "Test::Deep" => 0,
   "Test::Fatal" => "0.010",
+  "Test::MockModule" => 0,
   "Test::More" => "0.98",
   "Test::PostgreSQL" => 0,
   "Test::Refcount" => "0.07",
