@@ -9,6 +9,9 @@ requires 'URI::postgres', 0;
 requires 'URI::QueryParam', 0;
 requires 'Future::AsyncAwait', '>= 0.28';
 requires 'Template', '>= 2.28';
+requires 'File::HomeDir';
+requires 'Path::Tiny';
+requires 'Config::Tiny';
 
 requires 'Protocol::Database::PostgreSQL', '>= 1.005';
 
@@ -16,7 +19,8 @@ on 'test' => sub {
 	requires 'Test::More', '>= 0.98';
 	requires 'Test::Fatal', '>= 0.010';
 	requires 'Test::Refcount', '>= 0.07';
-	suggests 'Test::PostgreSQL', '>= 1.26';
+    requires 'Test::MockModule';
+    requires 'File::Temp';
 };
 
 on 'develop' => sub {
