@@ -14,6 +14,8 @@ Database::Async::Engine::PostgreSQL - support for PostgreSQL databases in L<Data
 
 =head1 DESCRIPTION
 
+Connection can also be made using a service definition, as described in L<https://www.postgresql.org/docs/current/libpq-pgservice.html>.
+
 =cut
 
 no indirect;
@@ -25,6 +27,8 @@ use URI::postgres;
 use URI::QueryParam;
 use Future::AsyncAwait;
 use Database::Async::Query;
+use File::HomeDir;
+use Config::Tiny;
 
 use Protocol::Database::PostgreSQL::Client qw(0.008);
 use Protocol::Database::PostgreSQL::Constants qw(:v1);
@@ -111,7 +115,9 @@ async sub connect {
     # Initial connection is made directly through the URI
     # parameters. Eventually we also want to support UNIX
     # socket and other types.
-    my $uri = $self->uri;
+    my $uri = $self->service
+    ? $self->uri_for_service($self->service)
+    : $self->uri;
     die 'bad URI' unless ref $uri;
     my $endpoint = join ':', $uri->host, $uri->port;
     $log->tracef('Will connect to %s', $endpoint);
@@ -170,6 +176,37 @@ async sub connect {
     );
     return $stream;
 }
+
+=head2 service_conf_path
+
+Return the expected location for the pg_service.conf file.
+
+=cut
+
+sub service_conf_path {
+    my ($class) = @_;
+    return $ENV{PGSERVICEFILE} if exists $ENV{PGSERVICEFILE};
+    return $ENV{PGSYSCONFDIR} . '/pg_service.conf' if exists $ENV{PGSYSCONFDIR};
+    my $path = File::HomeDir->my_home . '/.pg_service.conf';
+    return $path if -r $path;
+    return '/etc/pg_service.conf';
+}
+
+sub service_parse {
+    my ($class, $path) = @_;
+    return Config::Tiny->read($path, 'encoding(UTF-8)');
+}
+
+sub find_service {
+    my ($class, $srv) = @_;
+    my $data = $class->service_parse(
+        $class->service_conf_path
+    );
+    die 'service ' . $srv . ' not found in config' unless $data->{$srv};
+    return $data->{$srv};
+}
+
+sub service { shift->{service} //= $ENV{PGSERVICE} }
 
 sub database_name {
     my $uri = shift->uri;
@@ -249,6 +286,23 @@ sub uri_for_dsn {
     my %args = split /[=;]/, $dsn;
     my $uri = URI->new('postgresql://postgres@localhost/postgres');
     $uri->$_(delete $args{$_}) for grep exists $args{$_}, qw(host port user password dbname);
+    $uri
+}
+
+sub uri_for_service {
+    my ($class, $service) = @_;
+    my $cfg = $class->find_service($service);
+    my $uri = URI->new('postgresql://postgres@localhost/postgres');
+    $uri->$_(delete $cfg->{$_}) for grep exists $cfg->{$_}, qw(host port user password dbname);
+    $uri->host(delete $cfg->{hostaddr}) if exists $cfg->{hostaddr};
+    $uri->query_param($_ => delete $cfg->{$_}) for grep exists $cfg->{$_}, qw(
+        application_name
+        fallback_application_name
+        keepalives
+        options
+        sslmode
+        replication
+    );
     $uri
 }
 
