@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - support PGSERVICE, PGSERVICEFILE and PGSYSCONFDIR for locating and using
+    PostgreSQL service definitions
 
 0.008     2019-07-16 20:40:17+08:00 Asia/Kuala_Lumpur
     No new features.
